@@ -13,7 +13,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>dev.cat.RaffleApplication</start-class>
-        <skipTests>true</skipTests>
+<!--        <skipTests>true</skipTests>-->
     </properties>
 
     <dependencies>
@@ -39,6 +39,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.27.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.pdfsam</groupId>
+            <artifactId>javafx-monocle</artifactId>
+            <version>21</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -69,6 +75,35 @@
                             <buildArgs>
                                 <buildArg>-H:ConfigurationFileDirectories=./agent-data</buildArg>
                             </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>headless-ci</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.5.3</version>
+                        <configuration>
+                            <forkCount>1</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>
+                                --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                                --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                                --add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                                --add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                                -Dtestfx.robot=glass
+                                -Dtestfx.headless=true
+                                -Dglass.platform=Monocle
+                                -Dmonocle.platform=Headless
+                                -Dprism.order=sw
+                                -Dprism.text=t2k
+                                -Djava.awt.headless=true
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
